- `list-waves`: (reinstated) show migration wave information
- `make-legendary`: (reinstated) make a dwarf legendary in specified skills
- `combat-harden`: (reinstated) set a dwarf's resistence to being affected by visible corpses
- `add-thought`: (reinstated) add custom thoughts to a dwarf

## New Features

## Fixes
- `gui/design`: fix clicking the center point when there is a mark behind it entering both mark dragging and center dragging at the same time. Now you can click once to move the shape, and click twice to move only the mark behind the center point.
- `fix/retrieve-units`: prevent pulling in duplicate units from offscreen
- `warn-stranded`: when there was at least one truly stuck unit and miners were actively mining, the miners were also confusingly shown in the stuck units list
- `source`: fix issue where removing sources would make some other sources inactive
- `caravan`: display book and scroll titles in the goods and trade dialogs instead of generic scroll descriptions
- `item`: avoid error when scanning items that have no quality rating (like bars and other construction materials)
- `gui/blueprint`: changed hotkey for setting blueprint origin tile so it doesn't conflict with default map movement keys
- `gui/launcher`: developer mode hotkey changed from Ctrl-D to Alt-D so as not to conflict with the hotkey for `gui/design`

## Misc Improvements
- `exportlegends`: make progress increase smoothly over the entire export and increase precision of progress percentage
- `gui/autobutcher`: ask for confirmation before zeroing out targets for all races
- `caravan`: move goods to trade depot dialog now allocates more space for the display of the value of very expensive items
- `extinguish`: allow selecting units/items/buildings in the UI to target them for extinguishing; keyboard cursor is only required for extinguishing map tiles that cannot be selected any other way