@@ -34,6 +34,7 @@ Template for new versions:
 - `make-legendary`: (reinstated) make a dwarf legendary in specified skills
 - `combat-harden`: (reinstated) set a dwarf's resistence to being affected by visible corpses
 - `add-thought`: (reinstated) add custom thoughts to a dwarf
+- `devel/input-monitor`: interactive UI for debugging input issues
 
 ## New Features
 
